@@ -10,8 +10,13 @@ import com.example.util.http.ServiceUtil;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.web.bind.annotation.RestController;
+import reactor.core.publisher.Mono;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
+
+import static java.util.logging.Level.FINE;
 
 @RestController
 @Slf4j
@@ -22,76 +27,78 @@ public class ProductCompositeServiceImpl implements ProductCompositeService {
     private final ProductCompositeIntegration integration;
 
     @Override
-    public void createProduct(ProductAggregate body) {
+    public Mono<Void> createProduct(ProductAggregate body) {
 
         try {
 
-            log.debug("createCompositeProduct: creates a new composite entity for productId: {}", body.getProductId());
+            List<Mono> monoList = new ArrayList<>();
+
+            log.info("Will create a new composite entity for product.id: {}", body.getProductId());
 
             Product product = new Product(body.getProductId(), body.getName(), body.getWeight(), null);
-            integration.createProduct(product);
+            monoList.add(integration.createProduct(product));
 
             if (body.getRecommendations() != null) {
                 body.getRecommendations().forEach(r -> {
                     Recommendation recommendation = new Recommendation(body.getProductId(), r.getRecommendationId(), r.getAuthor(), r.getRate(), r.getContent(), null);
-                    integration.createRecommendation(recommendation);
+                    monoList.add(integration.createRecommendation(recommendation));
                 });
             }
 
             if (body.getReviews() != null) {
                 body.getReviews().forEach(r -> {
                     Review review = new Review(body.getProductId(), r.getReviewId(), r.getAuthor(), r.getSubject(), r.getContent(), null);
-                    integration.createReview(review);
+                    monoList.add(integration.createReview(review));
                 });
             }
 
             log.debug("createCompositeProduct: composite entities created for productId: {}", body.getProductId());
 
+            return Mono.zip(r -> "", monoList.toArray(new Mono[0]))
+                    .doOnError(ex -> log.warn("createCompositeProduct failed: {}", ex.toString()))
+                    .then();
+
         } catch (RuntimeException re) {
-            log.warn("createCompositeProduct failed", re);
+            log.warn("createCompositeProduct failed: {}", re.toString());
             throw re;
         }
     }
 
+    @Override
+    public Mono<ProductAggregate> getProduct(int productId) {
+
+        log.info("Will get composite product info for product.id={}", productId);
+        return Mono.zip(
+                        values -> createProductAggregate((Product) values[0], (List<Recommendation>) values[1], (List<Review>) values[2], serviceUtil.getServiceAddress()),
+                        integration.getProduct(productId),
+                        integration.getRecommendations(productId).collectList(),
+                        integration.getReviews(productId).collectList())
+                .doOnError(ex -> log.warn("getCompositeProduct failed: {}", ex.toString()))
+                .log(log.getName(), FINE);
+    }
 
     @Override
-    public ProductAggregate getProduct(int productId) {
+    public Mono<Void> deleteProduct(int productId) {
 
-        log.debug("getCompositeProduct: lookup a product aggregate for productId: {}", productId);
+        try {
 
-        Product product = integration.getProduct(productId);
-        if (product == null) {
-            throw new NotFoundException("No product found for productId: " + productId);
+            log.info("Will delete a product aggregate for product.id: {}", productId);
+
+            return Mono.zip(
+                            r -> "",
+                            integration.deleteProduct(productId),
+                            integration.deleteRecommendations(productId),
+                            integration.deleteReviews(productId))
+                    .doOnError(ex -> log.warn("delete failed: {}", ex.toString()))
+                    .log(log.getName(), FINE).then();
+
+        } catch (RuntimeException re) {
+            log.warn("deleteCompositeProduct failed: {}", re.toString());
+            throw re;
         }
-
-        List<Recommendation> recommendations = integration.getRecommendations(productId);
-
-        List<Review> reviews = integration.getReviews(productId);
-
-        log.debug("getCompositeProduct: aggregate entity found for productId: {}", productId);
-
-        return createProductAggregate(product, recommendations, reviews, serviceUtil.getServiceAddress());
     }
 
-    @Override
-    public void deleteProduct(int productId) {
-
-        log.debug("deleteCompositeProduct: Deletes a product aggregate for productId: {}", productId);
-
-        integration.deleteProduct(productId);
-
-        integration.deleteRecommendations(productId);
-
-        integration.deleteReviews(productId);
-
-        log.debug("deleteCompositeProduct: aggregate entities deleted for productId: {}", productId);
-    }
-
-    private ProductAggregate createProductAggregate(
-            Product product,
-            List<Recommendation> recommendations,
-            List<Review> reviews,
-            String serviceAddress) {
+    private ProductAggregate createProductAggregate(Product product, List<Recommendation> recommendations, List<Review> reviews, String serviceAddress) {
 
         // 1. Setup product info
         int productId = product.getProductId();
@@ -102,13 +109,13 @@ public class ProductCompositeServiceImpl implements ProductCompositeService {
         List<RecommendationSummary> recommendationSummaries = (recommendations == null) ? null :
                 recommendations.stream()
                         .map(r -> new RecommendationSummary(r.getRecommendationId(), r.getAuthor(), r.getRate(), r.getContent()))
-                        .toList();
+                        .collect(Collectors.toList());
 
         // 3. Copy summary review info, if available
-        List<ReviewSummary> reviewSummaries = (reviews == null) ? null :
+        List<ReviewSummary> reviewSummaries = (reviews == null)  ? null :
                 reviews.stream()
                         .map(r -> new ReviewSummary(r.getReviewId(), r.getAuthor(), r.getSubject(), r.getContent()))
-                        .toList();
+                        .collect(Collectors.toList());
 
         // 4. Create info regarding the involved microservices addresses
         String productAddress = product.getServiceAddress();
